Fix spacing between date and post title on homepage

--- a/assets/scss/components/_article-head.scss
+++ b/assets/scss/components/_article-head.scss
@@ -36,6 +36,7 @@
       top: 0;
       width: 6rem;
       text-align: right;
+      left: -8px;
 
       @media #{$medium-up} {
         top: -0.2em;
